<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tipcalculator.MainActivity"
    android:layout_margin="10dp"
    android:background="#fd9">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="35sp"
        android:textColor="#00F"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/food"
        android:layout_below="@id/titleView"/>

    <LinearLayout
        android:id="@+id/inputBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/imageView"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_bill"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/billView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputDiners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/inputBill"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_diners"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/dinerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:textSize="30sp"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:text="@string/checkbox_divide"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:id="@+id/output_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/checkBox"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output_tip"
            android:textSize="30sp"
            android:paddingEnd="40dp"/>

        <TextView
            android:id="@+id/outputTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/output_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/output_tip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output_bill"
            android:textSize="30sp"
            android:paddingEnd="80dp"/>

        <TextView
            android:id="@+id/outputBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/barLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:layout_below="@id/inputDiners"
        android:layout_centerHorizontal="true"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputDiners"
        android:max="30"
        android:progress="10"/>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/output_bill"
        android:onClick="buttonPressed"/>

</RelativeLayout>
